<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/margin_top_card_fragment"
    android:padding="0dp"
    tools:context="tomas.com.sysdist.controller.view.fragments.TeacherFragments"
    android:id="@+id/fragment_teacher">
    <!-- TODO: Update blank fragment layout-->
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_viewxxx0"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/margin_top_card_fragment2"
                android:layout_marginTop="@dimen/margin_card_start_end"
                android:layout_marginBottom="@dimen/margin_card_start_end"
                android:layout_marginRight="@dimen/margin_card_left_right"
                android:layout_marginLeft="@dimen/margin_card_left_right"
                card_view:cardCornerRadius="10dp">
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/margin_top_card_fragment2"
                    android:layout_alignParentBottom="true"
                    android:padding="@dimen/paddin_layout"
                    android:layout_marginBottom="@dimen/menu_margin_bottom">
                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="fill_parent"
                        android:layout_gravity="center"
                        android:text="@string/teacherFrag"
                        android:textSize="@dimen/title_fragment_student"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textColor="@color/colorTextV"
                        />
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_card_start_end"
                android:layout_marginBottom="@dimen/margin_card_start_end"
                android:layout_marginRight="@dimen/margin_card_left_right"
                android:layout_marginLeft="@dimen/margin_card_left_right"
                card_view:cardCornerRadius="10dp"
                card_view:paddingEnd="@dimen/margin_mini"
                card_view:paddingStart="@dimen/margin_mini">
                <ScrollView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">
                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <EditText
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/controlXMLteacher"
                            android:layout_marginTop="@dimen/margin_register"
                            android:textSize="@dimen/textSize"
                            android:textAlignment="center"
                            android:textStyle="bold"
                            android:hint="@string/control"
                            android:inputType="numberDecimal"/>
                        <EditText
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_register"
                            android:id="@+id/nameXMLteacher"
                            android:textSize="@dimen/textSize"
                            android:textAlignment="center"
                            android:textStyle="bold"
                            android:hint="@string/name"/>
                        <EditText
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_register"
                            android:id="@+id/last_nameXMLteacher"
                            android:textSize="@dimen/textSize"
                            android:textAlignment="center"
                            android:textStyle="bold"
                            android:hint="@string/last_name"/>
                        <EditText
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_register"
                            android:id="@+id/raceXMLteacher"
                            android:textSize="@dimen/textSize"
                            android:textAlignment="center"
                            android:textStyle="bold"
                            android:hint="@string/race"/>
                        <EditText
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_register"
                            android:id="@+id/phoneXMLteacher"
                            android:textSize="@dimen/textSize"
                            android:textAlignment="center"
                            android:textStyle="bold"
                            android:hint="@string/number"
                            android:inputType="phone"/>
                        <EditText
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_register"
                            android:id="@+id/emailXMLteacher"
                            android:textSize="@dimen/textSize"
                            android:textAlignment="center"
                            android:textStyle="bold"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"/>
                        <RelativeLayout
                            android:layout_width="fill_parent"
                            android:layout_height="@dimen/heigth">
                            <ImageButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/margin_main"
                                android:background="@drawable/button_mini"
                                android:elevation="@dimen/elevation_content"
                                android:src="@drawable/ic_reply_white_48dp"
                                android:id="@+id/returnXMLfragmentTeacher"/>
                            <ImageButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/margin_main"
                                android:layout_alignParentRight="true"
                                android:layout_alignParentBottom="true"
                                android:src="@drawable/ic_control_point_white_48dp"
                                android:background="@drawable/button_mini"
                                android:elevation="@dimen/elevation_content"
                                android:id="@+id/plusXMLfragmentTeacher"/>
                        </RelativeLayout>
                    </LinearLayout>
                </ScrollView>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_viewxxx"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/margin_top_card_fragment2"
                android:layout_marginTop="@dimen/margin_card_start_end"
                android:layout_marginBottom="@dimen/margin_card_start_end"
                android:layout_marginRight="@dimen/margin_card_left_right"
                android:layout_marginLeft="@dimen/margin_card_left_right"
                card_view:cardCornerRadius="10dp">
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/margin_top_card_fragment2"
                    android:layout_alignParentBottom="true"
                    android:padding="@dimen/paddin_layout"
                    android:layout_marginBottom="@dimen/menu_margin_bottom"
                    android:orientation="vertical">
                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="fill_parent"
                        android:text="@string/option"
                        android:textSize="@dimen/text_size_register"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textColor="@color/colorTextV"
                        />
                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="1">
                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.50"
                            android:text="@string/teacher"
                            android:onClick="onClickTeacher"/>
                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.50"
                            android:text="@string/student"
                            android:onClick="onClickStudent"/>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>




</FrameLayout>
