<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main"
    tools:context=".MainActivity">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="@dimen/heigth"
                android:orientation="horizontal">
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/margin_main"
                    android:src="@drawable/ic_settings_white_48dp"
                    android:elevation="@dimen/elevation"
                    android:background="@drawable/button"
                    android:onClick="onClickSettings"
                    android:id="@+id/settingsXML"/>
                <Button
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/settings"
                    android:textColor="@color/colorAccent"
                    android:layout_marginTop="@dimen/margin_main"
                    android:layout_marginLeft="@dimen/margin_mini"
                    android:onClick="onClickSettings"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="@dimen/heigth"
                android:orientation="horizontal">
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/margin_main"
                    android:src="@drawable/ic_content_paste_white_48dp"
                    android:elevation="@dimen/elevation"
                    android:background="@drawable/button"
                    android:onClick="onClickRegister"
                    android:id="@+id/registerXML"/>
                <Button
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/register"
                    android:textColor="@color/colorAccent"
                    android:layout_marginTop="@dimen/margin_main"
                    android:layout_marginLeft="@dimen/margin_mini"
                    android:onClick="onClickRegister"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="@dimen/heigth"
                android:orientation="horizontal">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/margin_main"
                    android:src="@drawable/ic_format_list_bulleted_white_48dp"
                    android:elevation="@dimen/elevation"
                    android:background="@drawable/button"
                    android:onClick="onClickList"
                    android:id="@+id/listXML"/>
                <Button
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/list"
                    android:textColor="@color/colorAccent"
                    android:layout_marginTop="@dimen/margin_main"
                    android:layout_marginLeft="@dimen/margin_mini"
                    android:onClick="onClickList" />
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
</ScrollView>